ingress/ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Copyleft (c) by Oleg Vaiser 2021
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
    - host: oleg.weisser.com
      http:
        paths:
          - backend:
              serviceName: main
              servicePort: 80

    - host: oleg.weisser.com
      http:
        paths:
          - backend:
              serviceName: web1
              servicePort: 80

    - host: oleg.weisser.com
      http:
        paths:
          - backend:
              serviceName: tomcat
              servicePort: 8080
