ingress/ingress-paths.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Host Paths
#
# Copyleft (c) by Oleg Vaiser 2021
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
    - host: www.adv-it.net
      http:
        paths:
          - path: "/page1"
            backend:
              serviceName: web2
              servicePort: 80

          - path: "/page2"
            backend:
              serviceName: web2
              servicePort: 80

          - path: "/page3"
            backend:
              serviceName: web2
              servicePort: 80
